--- a/src/sass/components/_app.scss
+++ b/src/sass/components/_app.scss
@@ -8,6 +8,8 @@
   @include respond-small {
     grid-template-columns: auto;
     grid-template-rows: 6rem auto 3rem;
+    // height: auto;
+    // max-height: fit-content;
   }
 }
 
@@ -40,6 +42,8 @@
 .main {
   grid-column: 2 / 3;
   grid-row: 2 / 3;
+  clear: both;
+  overflow: hidden;
   // @include respond-small {
   //   grid-row: 2;
   // }
